--- a/index.html
+++ b/index.html
@@ -11,3 +11,11 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+</style>
